cmake_minimum_required(VERSION 3.2)
add_compile_options(-std=c++11)
project(YOLOv5ncnn-vulkan)
SET(CMAKE_BUILD_TYPE Release)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)  
find_package(Threads)
if(OPENMP_FOUND)
    message("OPENMP FOUND")  
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")  
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")  
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")  
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(YOLOv5ncnn-vulkan src/YOLOv5ncnn-vulkan.cpp)
target_link_libraries(YOLOv5ncnn-vulkan ncnn ${OpenCV_LIBS} ${PROJECT_SOURCE_DIR}/lib/libncnn.a ${PROJECT_SOURCE_DIR}/lib/libvulkan-sdk.a ${PROJECT_SOURCE_DIR}/lib/libvulkan-stub.a)
